# heavyedge-features

./: .flake8  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml
doc/source/: conf.py  index.rst
src/: conftest.py
src/heavyedge_features/: edge_width.py  iproj.py
src/heavyedge_features/api/: __init__.py
src/heavyedge_features/plugins/: features.py
src/heavyedge_features/samples/: __init__.py  recipes.py
tests/: conftest.py  test_command.py
